--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "runkoa": "^1.5.2"
   },
   "devDependencies": {
+    "koa-proxy": "^0.9.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.9.1",
     "should": "^13.2.3",
